# hello_world_lib

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build.yml
lib/: CMakeLists.txt
lib/include/: hello_world_lib.h
